# wasmi-plugin-framework

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  makefile  shell.nix  todo.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/test-plugin/: Cargo.toml
crates/test-plugin/src/: main.rs
crates/wasmi-plugin-coordinator/: Cargo.toml  README.md
crates/wasmi-plugin-coordinator-protocol/: Cargo.toml
crates/wasmi-plugin-coordinator-protocol/src/: lib.rs
crates/wasmi-plugin-coordinator/.cargo/: config.toml
crates/wasmi-plugin-coordinator/assets/: worker.js  worker.wasm
crates/wasmi-plugin-coordinator/src/: lib.rs  worker.js  worker.rs
crates/wasmi-plugin-coordinator/src/worker_pool/: mod.rs  pool.rs  worker.js  worker.rs  worker_message.rs
crates/wasmi-plugin-hdk/: Cargo.toml  dhat-heap.json
crates/wasmi-plugin-hdk/benches/: benchmark.rs  wasm_bench.rs
crates/wasmi-plugin-hdk/src/: client.rs  compile.rs  host_handler.rs  instance_id.rs  lib.rs  plugin.rs  plugin_id.rs  plugin_instance.rs  server.rs  session.rs  time.rs  transport.rs
crates/wasmi-plugin-hdk/src/bridge/: mod.rs  native_bridge.rs  non_blocking_pipe.rs  shared_pipe.rs  virtual_file.rs  worker_bridge.rs  worker_protocol.rs
crates/wasmi-plugin-hdk/src/runtime/: coordinator_message.rs  message_writer.rs  mod.rs  native_runtime.rs  non_blocking_pipe.rs  shared_pipe.rs  thread_worker.rs  worker.js  worker_loader.js  worker_message.rs  worker_pool.rs  worker_protocol.rs  worker_runtime.rs
crates/wasmi-plugin-hdk/src/wasi/: linker.rs  mod.rs  non_blocking_pipe.rs  wasi.rs  wasi_ctx.rs  wasmi.rs
crates/wasmi-plugin-hdk/src/worker_pool/: mod.rs  pool.rs  worker.js  worker_message.rs
crates/wasmi-plugin-hdk/tests/: integration.rs  worker_test.rs
crates/wasmi-plugin-pdk/: Cargo.toml
crates/wasmi-plugin-pdk/src/: api.rs  client.rs  lib.rs  poll_oneoff.rs  router.rs  rpc_message.rs  runner.rs  server.rs  transport.rs  transport_driver.rs
crates/wasmi-plugin-rt/: Cargo.toml
crates/wasmi-plugin-rt/src/: lib.rs
crates/wasmi-plugin-wasi/: Cargo.toml
crates/wasmi-plugin-wasi/src/: lib.rs  non_blocking_pipe.rs  wasi_ctx.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  message_writer.rs
