[workspace]
members = [
    "crates/test-plugin",
    "crates/wasmi-plugin-hdk",
    "crates/wasmi-plugin-pdk",
    "crates/wasmi-plugin-rt",
]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = [ "v4", "serde", "js" ] } 
wasm-bindgen-futures = "0.4"
wasmi = "1.0"
wasmi-plugin-pdk = { path = "./crates/wasmi-plugin-pdk" }
wasmi-plugin-rt = { path = "./crates/wasmi-plugin-rt" }
web-time = "1"