[package]
name = "test-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wasmi-plugin-pdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
lto = true
