[package]
name = "test-plugin"
version.workspace = true
rust-version.workspace = true
description = "Wasmi-Plugin-Framework test plugin"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
publish = false

[dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wasmi-plugin-pdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
