[package]
name = "test-plugin"
version.workspace = true
rust-version.workspace = true
description = "Test plugin for wasmi-plugin-framework"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
publish = false

[dependencies]
futures = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmi-plugin-pdk = { workspace = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"