[package]
name = "wasmi-plugin-coordinator"
version.workspace = true
rust-version.workspace = true
description = "Atomics-enabled coordinator for compute web workers"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Worker", "WorkerOptions", "DedicatedWorkerGlobalScope", "WorkerType", "MessageEvent", "ErrorEvent", "Blob", "BlobPropertyBag", "Url", "console", "TextDecoder"] }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasmi-plugin-hdk = { workspace = true }
wasmi-plugin-wasi = { workspace = true }
wasmer = { workspace = true, features = ["js-default", "js-serializable-module"] }
tracing-wasm = { workspace = true }
wasmi-plugin-coordinator-protocol = { workspace = true }