[package]
name = "wasmi-plugin-hdk"
version.workspace = true
rust-version.workspace = true
description = "Host development kit for the wasmi WebAssembly Interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmi-plugin-pdk = { workspace = true }
wasmi-plugin-rt = { workspace = true }
web-time = { workspace = true }
wasmer-types = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
wasmer = { workspace = true, features = ["sys", "cranelift"] }
wasmer-wasix = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }
tracing-wasm = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasmer = { workspace = true, features = ["js-default"] }
wasmer-wasix = { workspace = true, features = ["js-default"] }
web-sys = { workspace = true, features=["Worker", "MessageEvent", "Blob", "BlobPropertyBag", "Url", "console", "TextDecoder"] }
wasm-bindgen-futures = { workspace = true }
wasmer-types = { workspace = true, features=["enable-serde"] }

[dev-dependencies]
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
dhat = "0.3"
wasm-bindgen-test = "0.3"

# Disables criterion for wasm targets since it's not compatible
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "benchmark"
harness = false
