[package]
name = "wasmi-plugin-hdk"
version.workspace = true
rust-version.workspace = true
description = "Host development kit for the wasmi WebAssembly Interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
futures = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmi-plugin-pdk = { workspace = true }
wasmi-plugin-rt = { workspace = true }
wasmi-plugin-wasi = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
wasmer = { workspace = true, default-features = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmi-plugin-coordinator-protocol = { workspace = true }
gloo-timers = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasmer = { workspace = true, features = ["js-default", "js-serializable-module"] }
web-sys = { workspace = true, features = ["Worker", "WorkerOptions", "DedicatedWorkerGlobalScope", "WorkerType", "MessageEvent", "ErrorEvent", "Blob", "BlobPropertyBag", "Url", "console", "TextDecoder"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tracing-wasm = { workspace = true }
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
