[package]
name = "wasmi-plugin-pdk"
version.workspace = true
rust-version.workspace = true
description = "Plugin development kit for the wasmi WebAssembly Interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmi-plugin-rt = { workspace = true }
