[package]
name = "wasmi-plugin-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
web-time = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
gloo-timers = { workspace = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tokio = { workspace = true }
