[package]
name = "wasmi-plugin-rt"
version.workspace = true
rust-version.workspace = true
description = "Runtime utilities for wasmi-plugin-framework"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
web-time = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
gloo-timers = { workspace = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tokio = { workspace = true }
