[package]
name = "wasmi-plugin-wasi"
version.workspace = true
rust-version.workspace = true
description = "Runtime utilities for wasmi-plugin-framework"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
web-time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasmi-plugin-rt = { workspace = true }
getrandom = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = { workspace = true, default-features = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { workspace = true, features = ["js-default", "js-serializable-module"] }